# ai-projects

./: .gitattributes  README.md  bot_starter_pack.md  test.txt
Plugin for WP sites/: .gitignore  .qa-state.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  HANDOFF-OPUS.md  REVIEW.md  package-lock.json  package.json  theme.json
Plugin for WP sites/.githooks/: pre-push
bot for tellegram for massage/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
bot for tellegram for massage/massage_bot/: __init__.py  config.py  database.py  handlers_admin.py  handlers_client.py  keyboards.py  main.py  middlewares.py  schedule.py  states.py  texts.py
bot for tellegram for massage/tests/: test_addons.py  test_admin_editors.py  test_admin_validation.py  test_client_data.py  test_critical_fixes.py  test_database_mvp.py  test_schedule.py
feature for elementor/: .mcp.json  AGENTS.md  FIGMA-TO-ELEMENTOR-WORKFLOW.md  elementor-1336-2026-06-17.json  elementor-3575-2026-06-17.json  elementor-7266-2026-06-17.json  parse_meta.py  schnelle-installation-section.json  suessco-about-us-elementor-clipboard.json  suessco-home-elementor-clipboard.json  suessco-home-elementor.json
for all small things/: AGENTS.md  CHANGELOG.md  CODEX_SETUP.md
plugin for Der Flugschreiber/: AGENTS.md  df-demo-blog-posts-de.xml
sstart.digirelation.com/: _kontakt_b64.txt  reader this.txt
wp-event-monitor/: .editorconfig  CHANGELOG.md  new-events.html  new-post-2082.css  old-events.html  old-post-662.css  old-post-665.css  old-post-801.css  old-post-887.css  uninstall.php  wp-event-monitor.php
(+500 files in other folders)
